=== HEAD

* Do not add a schema :max_length entry for a varchar(max) column on MSSQL (jeremyevans)

* Allow :default value for PostgreSQL array columns to be a ruby array when using the pg_array extension (jeremyevans) (#989)

* Add csv_serializer plugin for serializing model objects to and from csv (bjmllr, jeremyevans) (#988)

* Make Dataset#to_hash and #to_hash_groups handle single array argument for model datasets (jeremyevans)

* Handle Model#cancel_action in association before hooks (jeremyevans)

* Use a conditional variable instead of busy waiting in the threaded connection pools on ruby 1.9+ (jeremyevans)

* Use Symbol#to_proc instead of explicit blocks (jeremyevans)

=== 4.21.0 (2015-04-01)

* Support :tsquery and :tsvector options in Dataset#full_text_search on PostgreSQL, for using existing tsquery/tsvector expressions (jeremyevans)

* Fix TinyTds::Error being raised when trying to cancel a query on a closed connection in the tinytds adapter (jeremyevans)

* Add GenericExpression#!~ for inverting =~ on ruby 1.9 (similar to inverting a hash) (jeremyevans) (#979)

* Add GenericExpression#=~ for equality, inclusion, and pattern matching (similar to using a hash) (jeremyevans) (#979)

* Add Database#add_named_conversion_proc on PostgreSQL to make it easier to add conversion procs for types by name (jeremyevans)

* Make Sequel.pg_jsonb return JSONBOp instances instead of JSONOp instances when passed other than Array or Hash (jeremyevans) (#977)

* Demodulize default root name in json_serializer plugin (janko-m) (#968)

* Make Database#transaction work in after_commit/after_rollback blocks (jeremyevans)

=== 4.20.0 (2015-03-03)

* Restore the use of AUTOINCREMENT on SQLite (jeremyevans) (#965)

* Duplicate the associations hash when duplicating a model object (jeremyevans)

* Correctly apply association limit when eager loading with an eager block using default limit strategy on some databases (jeremyevans)
